--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -5,7 +5,7 @@ linters:
     - git add
   "(src/**/*.spec.ts|test/**/*.ts)":
     - prettier --write --config ./.prettierrc.yml
-    # FIXME tslint will not work because of the following error
+    # TODO LOW tslint will not work because of the following error
     # ✖ tslint --project ./tsconfig.jest.json -t codeFrame --fix found some errors. Please fix them and try committing again.
     #'/Users/michaelwittwer/dev/shiftcode/dynamo-easy/test/models/complex.model.ts' is not included in project.
     # - tslint --project ./tsconfig.jest.json -t codeFrame --fix
