feat(renovate): update config
- group @types dependencies into one group and ignore node update

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,12 @@
 {
   "extends": [
     "config:base"
+  ],
+  "ignoreDeps": ["@types/node"],
+  "packageRules": [
+    {
+      "packagePatterns": [ "^@types" ],
+      "groupName": "@types"
+    }
   ]
 }
