--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=dynamo-easy
+sonar.projectKey=shiftcode_dynamo-easy
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Dynamo Easy
 sonar.projectVersion=1.0
