chore(deps): bumb tslint and related
tslint introduced new rules, also bump tslint-config-prettier

--- a/tslint.yml
+++ b/tslint.yml
@@ -45,3 +45,6 @@ rules:
   no-unnecessary-class: true
   no-unnecessary-type-assertion: true
   no-unused-variable: true
+  # introduced with v5.12.0
+  unnecessary-constructor: true
+  unnecessary-bind: true
