refactor(aws-sdk): no more direct aws-sdk imports
no more imports from aws-sdk package for smaller bundles, introduce tslint rule to ensure this

--- a/tslint.yml
+++ b/tslint.yml
@@ -45,6 +45,9 @@ rules:
   no-unnecessary-class: true
   no-unnecessary-type-assertion: true
   no-unused-variable: true
+  import-blacklist:
+    - true
+    - aws-sdk
   # introduced with v5.12.0
   unnecessary-constructor: true
   unnecessary-bind: true
