--- a/tslint.yml
+++ b/tslint.yml
@@ -1,6 +1,8 @@
 extends:
   - "tslint:latest"
   - "tslint-config-prettier"
+rulesDirectory:
+  - ./tools/tslint
 rules:
   #
   # override rules from tslint:recommended
@@ -51,3 +53,4 @@ rules:
   # introduced with v5.12.0
   unnecessary-constructor: true
   unnecessary-bind: true
+  no-dynamo-named-import: true
