refactor(tslint): separate area for custom rules

--- a/tslint.yml
+++ b/tslint.yml
@@ -53,4 +53,8 @@ rules:
   # introduced with v5.12.0
   unnecessary-constructor: true
   unnecessary-bind: true
+
+  #
+  # custom rules
+  #
   no-dynamo-named-import: true
