--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@commitlint/config-conventional": "^7.1.2",
     "@commitlint/prompt-cli": "^7.2.1",
     "@types/jest": "^23.3.11",
-    "@types/lodash-es": "^4.14.119",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^8.10.39",
     "@types/uuid": "^3.4.4",
     "aws-sdk": "^2.382.0",
@@ -58,12 +58,13 @@
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
+    "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.15.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.3",
     "rxjs": "^6.3.3",
-    "semantic-release": "^16.0.0-beta.9",
+    "semantic-release": "^16.0.0-beta.16",
     "sort-package-json": "^1.16.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.2",
@@ -78,7 +79,7 @@
   },
   "peerDependencies": {
     "aws-sdk": "^2.382.0",
-    "lodash-es": "^4.17.11",
+    "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3",
     "uuid": "^3.3.2"
