--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "tslint-config-prettier": "^1.17.0",
     "tsutils": "^3.6.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.2.2",
+    "typescript": ">=2.9.1",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
