chore(snippets-tsconfig): move into folder

--- a/snippets/tsconfig.json
+++ b/snippets/tsconfig.json
@@ -20,15 +20,11 @@
     ],
     "paths": {
       "@shiftcoders/*": [
-        "src/*"
+        "../src/*"
       ]
     }
   },
   "include": [
-    "snippets/**/*.ts"
-  ],
-  "exclude": [
-    "test/**/*",
-    "src/**/*"
+    "./**/*.ts"
   ]
 }
