chore(dependencies): update dependencies
remove unused dependencies (greenkeeper-lockfile & tsc-watch) update other dependencies to newest versions. also update renovate config to not suggest version changes for typescript.

--- a/package.json
+++ b/package.json
@@ -34,51 +34,49 @@
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
+    "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "test": "jest",
     "test:ci": "jest --coverage --no-cache",
     "test:watch": "jest --watch",
     "tslint:custom-rule:build": "tsc ./tools/tslint/noDynamoNamedImportRule.ts",
-    "tslint:custom-rule:test": "tslint --test ./tools/tslint/test",
-    "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'"
+    "tslint:custom-rule:test": "tslint --test ./tools/tslint/test"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@commitlint/prompt-cli": "^7.2.1",
-    "@types/jest": "^23.3.11",
-    "@types/lodash": "^4.14.119",
-    "@types/node": "^8.10.39",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@commitlint/prompt-cli": "^7.5.0",
+    "@types/jest": "^24.0.1",
+    "@types/lodash": "^4.14.120",
+    "@types/node": "8.10.40",
     "@types/uuid": "^3.4.4",
-    "aws-sdk": "^2.382.0",
+    "aws-sdk": "^2.401.0",
     "colors": "^1.3.3",
     "coveralls": "^3.0.2",
-    "greenkeeper-lockfile": "^1.15.1",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
+    "jest": "^24.1.0",
+    "lint-staged": "^8.1.3",
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.15.3",
-    "reflect-metadata": "^0.1.12",
+    "prettier": "^1.16.4",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
-    "semantic-release": "^16.0.0-beta.16",
-    "sort-package-json": "^1.16.0",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^5.3.2",
-    "ts-node": "^7.0.1",
-    "tsc-watch": "^1.0.31",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tsutils": "^3.6.0",
-    "typedoc": "^0.13.0",
+    "semantic-release": "^16.0.0-beta.18",
+    "sort-package-json": "^1.19.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tsutils": "^3.8.0",
+    "typedoc": "^0.14.2",
     "typedoc-plugin-external-module-name": "^2.0.0",
     "typescript": ">=2.9.1",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
-    "aws-sdk": "^2.382.0",
+    "aws-sdk": "^2.401.0",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
     "uuid": "^3.3.2"
