--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,22 @@
 language: node_js
 node_js:
-- lts/*
+  - lts/*
 
 cache: npm
-#  directories:
-#  - $HOME/.npm
-#  - node_modules
 
-#before_install:
-#- npm install npm@^6.0.0 -g
-
-# npm ci will not work with branches created from greenkeeper, because those need to update the package-lock.json
-# From https://github.com/greenkeeperio/greenkeeper-lockfile#npm:
-# If dependencies in the package lock do not match those in package.json, npm ci will exit with an error, instead
-# of updating the package lock.
 install:
-#  decide if running on greenkeeper branch or not
-- case $TRAVIS_BRANCH in greenkeeper*) npm i;; *) npm ci;; esac;
-# somehow the above command fails when we have a cache available on travis - needs some more investigation, stick with
-# npm i for now
-#- npm ci
+  - npm ci
 
 notifications:
   email: false
 
-before_script: npx greenkeeper-lockfile-update
-
 script:
-- npm run lint:ci
-- npm run test:ci
-- npm run build
-- npm run build:docs
-
-after_script: npx greenkeeper-lockfile-upload
+  - npm run lint:ci
+  - npm run test:ci
+  - npm run build
+  - npm run docs:build
 
 after_success:
-- npm run report-coverage
-- npm run deploy-docs
-- npx semantic-release
+  - npm run report-coverage
+  - npm run docs:deploy
+  - npx semantic-release
