--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "config:base",
-    ":pinOnlyDevDependencies"
+    ":preserveSemverRanges"
   ],
   "ignoreDeps": [
     "@types/node",
