fix(lint-staged): update src glob pattern
before the pattern did not match any files

--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -1,4 +1,4 @@
-"src/**/*(!spec).ts":
+"src/**/!(*.spec).ts":
   - prettier --write --config ./.prettierrc.yml
   - tslint --project ./tsconfig.json -t codeFrame --fix
   - git add
