chore(dependencies): bumb dependencies
- update glob patterns for lintstagedrc.yml file
- typedoc (ignore typescript compiler errors, under the hood the typedoc package uses another version of typescript)
- order jest.config.js keys
- add ignore code for ts-jest to not see irrelevant warning codes

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
     "check-snippets": "npx tsc --outDir ./dist-snippets --project ./snippets/tsconfig.json && rimraf dist-snippets",
     "commity": "commit",
-    "docs:build": "rimraf ./dist/docs && typedoc --out dist/docs --readme ./doc-intro.md --target es6 --hideGenerator --theme minimal --excludePrivate --stripInternal",
+    "docs:build": "rimraf ./dist/docs && typedoc --out dist/docs --readme ./doc-intro.md --target es6 --hideGenerator --theme minimal --excludePrivate --stripInternal --ignoreCompilerErrors",
     "docs:deploy": "ts-node tools/gh-pages-publish",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
@@ -55,34 +55,33 @@
     "tslint:custom-rule:test": "tslint --test ./tools/tslint/test"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
-    "@commitlint/prompt-cli": "^7.5.0",
-    "@types/jest": "^24.0.1",
-    "@types/lodash": "^4.14.120",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@commitlint/prompt-cli": "^8.1.0",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.137",
     "@types/node": "8.10.40",
-    "@types/uuid": "^3.4.4",
+    "@types/uuid": "^3.4.5",
     "aws-sdk": "^2.401.0",
     "colors": "^1.3.3",
-    "coveralls": "^3.0.2",
-    "husky": "^2.0.0",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.3",
+    "coveralls": "^3.0.6",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.3",
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^2.6.3",
+    "rimraf": "^3.0.0",
     "semantic-release": "^16.0.0-beta.18",
-    "sort-package-json": "^1.19.0",
-    "ts-jest": "^24.0.0",
-    "ts-loader": "^5.3.3",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.12.1",
+    "sort-package-json": "^1.22.1",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
-    "tsutils": "^3.8.0",
-    "typedoc": "^0.14.2",
-    "typedoc-plugin-external-module-name": "^2.0.0",
+    "tsutils": "^3.17.1",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-external-module-name": "^2.1.0",
     "typescript": ">=2.9.1",
     "uuid": "^3.3.2"
   },
