fix(package.json): add missing dependency (tslib)

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "aws-sdk": "^2.401.0",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
+    "tslib": "^1.10.0",
     "uuid": "^3.3.2"
   }
 }
