--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "prettier": "^1.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "semantic-release": "^16.0.0-beta.18",
+    "semantic-release": "^16.0.1",
     "sort-package-json": "^1.22.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
