--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.137",
     "@types/node": "8.10.40",
-    "@types/uuid": "^3.4.5",
     "aws-sdk": "^2.401.0",
     "colors": "^1.3.3",
     "coveralls": "^3.0.6",
@@ -82,14 +81,12 @@
     "tsutils": "^3.17.1",
     "typedoc": "0.14.0",
     "typedoc-plugin-external-module-name": "^2.1.0",
-    "typescript": ">=2.9.1",
-    "uuid": "^3.3.2"
+    "typescript": ">=2.9.1"
   },
   "peerDependencies": {
     "aws-sdk": "^2.401.0",
     "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.12",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.2"
+    "tslib": "^1.10.0"
   }
 }
