--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "commity": "commit",
     "docs:build": "rimraf ./dist/docs && typedoc --out dist/docs --readme ./doc-intro.md --target es6 --hideGenerator --theme minimal --excludePrivate --stripInternal --ignoreCompilerErrors",
     "docs:deploy": "ts-node tools/gh-pages-publish",
-    "lint": "eslint --config .eslintrc.js --ext .ts --fix '{src,test}/**/*.ts'",
-    "lint:ci": "eslint --config .eslintrc.js --ext .ts",
+    "lint": "eslint --config .eslintrc.yml --ext .ts --fix '{src,test}/**/*.ts'",
+    "lint:ci": "eslint --config .eslintrc.yml --ext .ts",
     "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "test": "jest",
