--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         CI: true
   # release for master branch
   release:
+    runs-on: ubuntu-latest
     if: ${{ github.ref == 'master' }}
     needs: build
 
@@ -39,6 +40,7 @@ jobs:
 
   # release for PR branch
   releasePr:
+    runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/pull/') }}
     needs: build
 
