feat(prerelease): make sure to publish prerelease on prerelease channel

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,7 +5,8 @@
     },
     {
       "name": "#311-prerelease-deployment",
-      "channel": "pr311"
+      "channel": "pr311",
+      "prerelease": "pr311"
     }
   ]
 }
