chore(github-action): pass those arguments to semantic-release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         echo "pre-release because we are on a pull request"
         npm run report-coverage
-        npx semantic-release --dry-run
+        npx semantic-release -- --dry-run --debug
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
