--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
     # publish pre-release if on PR branch
     - name: release PR version
       if: ${{ startsWith(github.ref, 'refs/pull/') }}
-      run: npx semantic-release -- --dry-run --debug
+      run: npx semantic-release -- --debug
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
