build(semantic-release): update semantic-release config
make sure next is released on next channel with prerelease tag

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,5 +1,5 @@
 branches:
   - name: master
-  - name: "#91-default-value-provider"
-    channel: pr91
-    prerelease: pr91
+  - name: next
+    channel: next
+    prerelease: next
