--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "tsutils": "^3.17.1",
     "typedoc": "0.14.0",
     "typedoc-plugin-external-module-name": "^2.1.0",
-    "typescript": ">=2.9.1"
+    "typescript": ">=2.9.1 <4.0.0"
   },
   "peerDependencies": {
     "aws-sdk": "^2.401.0",
