chore(node): update to node 18 for dev
BREAKING CHANGE: Node.js 16 'Gallium' is now the minimum required version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,59 @@ on:
     tags-ignore:
       - '**'
 jobs:
+  test:
+    strategy:
+      matrix:
+        # Test with Node.js  v16(maintenance), v18 (LTS) and v19 current
+        node:
+          - 16
+          - 18
+          - 19
+    name: Node.js v${{ matrix.node }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        shell: bash
+        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      # Print current Node.js version
+      - run: node --version
+      # Print current Yarn version
+      - run: npm --version
+      # Print current Git version
+      - run: git --version
+      # Install node_modules
+      - run: npm ci
+      # Run tests
+      - run: npm run test:ci
+
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2.2.0
-      - name: Install Node v12
-        uses: actions/setup-node@v2-beta
+      - uses: actions/checkout@v3
+      - name: Install Node v18
+        uses: actions/setup-node@v3
         with:
-          node-version: 12
-      - uses: actions/cache@v2
+          node-version: 18
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        shell: bash
+        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
         with:
-          path: ~/.npm
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
