--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@commitlint/prompt-cli": "^8.1.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "8.10.40",
+    "@types/node": "^18.11.18",
     "aws-sdk": "^2.401.0",
     "colors": "^1.3.3",
     "coveralls": "^3.0.6",
@@ -84,5 +84,8 @@
     "aws-sdk": "^2.401.0",
     "reflect-metadata": "^0.1.12",
     "tslib": "^1.10.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
