--- a/package.json
+++ b/package.json
@@ -78,12 +78,12 @@
     "tsutils": "^3.17.1",
     "typedoc": "0.14.0",
     "typedoc-plugin-external-module-name": "^2.1.0",
-    "typescript": ">=2.9.1 <4.0.0"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "aws-sdk": "^2.401.0",
     "reflect-metadata": "^0.1.12",
-    "tslib": "^1.10.0"
+    "tslib": "^2.0.0"
   },
   "engines": {
     "node": ">=18"
