--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "docs:deploy": "ts-node tools/gh-pages-publish",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
+    "prepare": "husky install",
     "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "test": "jest",
@@ -62,7 +63,7 @@
     "aws-sdk": "^2.401.0",
     "colors": "^1.3.3",
     "coveralls": "^3.0.6",
-    "husky": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "^25.2.7",
     "lint-staged": "^13.1.0",
     "lodash.camelcase": "^4.3.0",
