chore(deps): remove ts-node
implement gh-page-publish in pure js

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "check-snippets": "npx tsc --outDir ./dist-snippets --project ./snippets/tsconfig.json && rimraf dist-snippets",
     "commity": "commit",
     "docs:build": "rimraf ./dist/docs && typedoc --out dist/docs --readme ./doc-intro.md --target es6 --hideGenerator --theme minimal --excludePrivate --stripInternal --ignoreCompilerErrors",
-    "docs:deploy": "ts-node tools/gh-pages-publish",
+    "docs:deploy": "node tools/gh-pages-publish.mjs",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
     "prepare": "husky install",
@@ -73,7 +73,6 @@
     "semantic-release": "^17.0.0",
     "sort-package-json": "^2.1.0",
     "ts-jest": "^25.0.0",
-    "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
     "tsutils": "^3.17.1",
