--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "license": "MIT",
   "author": "Michael Wittwer <michael.wittwer@shiftcode.ch>",
   "main": "./dist/dynamo-easy.js",
-  "module": "./dist/_esm5/dynamo-easy.js",
+  "module": "./dist/_esm2022/dynamo-easy.js",
   "typings": "./dist/_types/dynamo-easy.d.ts",
   "files": [
     "dist",
@@ -38,7 +38,7 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
+    "build": "tsc --outDir ./dist/_esm2022/ && tsc --outDir ./dist/ --module commonjs",
     "check-snippets": "npx tsc --outDir ./dist-snippets --project ./snippets/tsconfig.json && rimraf dist-snippets",
     "commity": "commit",
     "docs:build": "rimraf ./dist/docs && typedoc --out dist/docs --readme ./doc-intro.md --target es6 --hideGenerator --theme minimal --excludePrivate --stripInternal --ignoreCompilerErrors",
