chore(typescript): restructure tsconfig files
also update tsconfig to check-snippets (see script in package.json)

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "declarationMap": false,
     "declaration": false,         /* Generates corresponding '.d.ts' file. */
