--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "tslint:custom-rule:test": "tslint --test ./tools/tslint/test"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.252.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@commitlint/prompt-cli": "^17.4.2",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
-    "aws-sdk": "^2.401.0",
     "colors": "^1.4.0",
     "coveralls": "^3.1.1",
     "husky": "^8.0.0",
@@ -81,7 +81,7 @@
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "aws-sdk": "^2.401.0",
+    "@aws-sdk/client-dynamodb": "^3.252.0",
     "reflect-metadata": "^0.1.12",
     "tslib": "^2.0.0"
   },
