feat(aws-sdk-v3): [WIP] first compiling version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
   test:
     strategy:
       matrix:
-        # Test with Node.js  v16(maintenance), v18 (LTS) and v19 current
+        # Test with Node.js v18 (LTS) and v19 current
         node:
-          - 16
           - 18
+          - 19
     name: Node.js v${{ matrix.node }}
     runs-on: ubuntu-latest
     steps:
@@ -49,7 +49,6 @@ jobs:
       - run: HUSKY=0 npm ci
       # Run tests
       - run: npm run test:ci
-
   build:
     runs-on: ubuntu-latest
     steps:
